# tests

./: CMakeLists.txt  runme.sh  test.cpp  test3.cpp
input/: 2  3  4
